--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/reset.css">
-    <title>Forma ND</title>
+    <title>Document</title>
 </head>
 
 <body>
-
+    <main>
+        <h1>Registracija</h1>
+    </main>
 </body>
 
 </html>
