--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/reset.css">
-    <title>Document</title>
+    <title>Form</title>
 </head>
 
 <body>
     <main>
         <h1>Registracija</h1>
+        <!-- <div class="inputContainer"></div> -->
+        <div class="container"></div>
+        <!-- <div class="spacer"></div> -->
+
     </main>
 </body>
 
