--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 
 <body>
     <main>
-        <h1>Registracija</h1>
         <!-- <div class="inputContainer"></div> -->
-        <div class="container"></div>
-        <!-- <div class="spacer"></div> -->
-
+        <div class="spacer"></div>
+        <div class="container">
+            <h1>REGISTER</h1>
+            <div class="inputsContainer">
+                <input type="text" placeholder="First name">
+                <input type="text" placeholder="Last name">
+            </div>
+            <input type="text" placeholder="Email">
+            <input type="password" placeholder="Password">
+            <input type="password" placeholder="Confirm Password">
+            <input type="checkbox" id="cb">
+        </div>
     </main>
 </body>
 
