--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <main>
-        <!-- <div class="inputContainer"></div> -->
         <div class="spacer"></div>
         <div class="container">
             <h1>REGISTER</h1>
@@ -23,7 +22,14 @@
             <input type="text" placeholder="Email">
             <input type="password" placeholder="Password">
             <input type="password" placeholder="Confirm Password">
-            <input type="checkbox" id="cb">
+            <div id="cbContainer">
+                <input type="checkbox" id="cb">
+            </div>
+            <div id="textsContainer">
+                <label for="cb">I accept</label>
+                <a href="">Terms of use</a>
+            </div>
+            <button>REGISTER NOW</button>
         </div>
     </main>
 </body>
